--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="page">
     <div class="svg-layer">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-             class="svg-layer_picture" pageAlignment="none" x="0px" y="0px" width="100%" height="595px"
-             viewBox="0 0 842 595" enable-background="new 0 0 842 595" xml:space="preserve">
+             class="svg-layer_picture" pageAlignment="none" x="0px" y="0px" width="100%" height="495px"
+             viewBox="0 0 842 495" enable-background="new 0 0 842 595" xml:space="preserve">
             <defs>
                 <linearGradient x1="0.718739970288027" y1="-2.1474349245779933"
                                 x2="0.718739970288027" y2="405.1394178553481"
@@ -242,6 +242,7 @@ C11.256823576349547,9.707664518805037 8.736898066924521,12.507581751499515
                 </g>
             </g>
         </svg>
+        <button class="button-restart" id="restart"> Перезапустить</button>
     </div>
     <script type="text/javascript" src="index.js"></script>
 </div>
